# workstate

./: .gitignore  README.md  devenv.nix  justfile  pyproject.toml
.github/workflows/: analysis-scorecard.yaml  ci-nix.yaml  ci.yaml
src/workstate/: __init__.py  directory.py  file.py
src/workstate/fsspec/: __init__.py  base.py  directory.py  file.py
src/workstate/obstore/: __init__.py  base.py  directory.py  file.py  filter.py  options.py  state.py
tests/: README.md  __init__.py  conftest.py  test_error_handling.py  test_file.py  test_integration.py  test_performance.py  test_workstate.py
tests/fsspec/: __init__.py  test_directory.py  test_file.py
tests/obstore/: __init__.py  filter_test.py  state_test.py  test_directory.py  test_file.py  test_obstore.py
